# evm

./: Cargo.toml
core/: Cargo.toml
core/src/: error.rs  opcode.rs
gasometer/: Cargo.toml
gasometer/src/: consts.rs  costs.rs  lib.rs
precompiled/: Cargo.toml
precompiled/src/: lib.rs  tron.rs
precompiles/: Cargo.toml
precompiles/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: context.rs  handler.rs  lib.rs
runtime/src/eval/: mod.rs  system.rs
src/backend/: memory.rs  mod.rs
src/executor/: stack.rs
