[package]
name = "precompiled"
version = "3.7.0"
authors = ["andelf <andelf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
evm-core = { version = "0.17", path = "../core" }
evm-gasometer = { version = "0.17", path = "../gasometer" }
primitive-types = { version = "0.7", features = ["rlp"] }
libsecp256k1 = { version = "0.3.5", features = ["hmac"] }
sha3 = "0.8"
sha2 = "0.8"
digest = "0.8"
bn-plus = "0.4"
hex = "0.4"
num-bigint = "0.3"
num-traits = "0.2"
lazy_static = "1"
